# chestnut

./: .gitignore  .later_README.md  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: chestnut(1)-checkpoint.ipynb  chestnut-checkpoint.ipynb
data/: move_map.pickle
src/: .null-ls_109604_dataset.py  chestnut.ipynb  dataset.py  main.py  mcts.py  model.py  old_model.py  predict.py  preprocess.py  self_play.py  train.py  utils.py  widget.py
src/.ipynb_checkpoints/: chestnut-checkpoint.ipynb  train_chestnut-checkpoint.ipynb
